USF-922: rename extending to customizing dropins

--- a/src/content/docs/dropins/all/customizing.mdx
+++ b/src/content/docs/dropins/all/customizing.mdx
@@ -1,5 +1,5 @@
 ---
-title: Extending dropins
+title: Customizing dropins
 description: Learn about slots and how to use them to customize dropins.
 ---
 
