USF-1132: Renamed SEO topic

--- a/src/content/docs/implementation/marketing.mdx
+++ b/src/content/docs/implementation/marketing.mdx
@@ -1,5 +1,5 @@
 ---
-title: Marketing Technology and SEO
+title: Marketing technology and SEO
 description: Optimize your Adobe Commerce site for SEO and social media with proper data layers, schema.org annotations, metadata, canonical URLs, and redirects.
 ---
 
