--- a/src/content/docs/implementation/discovery/data-export-validation.mdx
+++ b/src/content/docs/implementation/discovery/data-export-validation.mdx
@@ -1,16 +1,16 @@
 ---
 title: Data export validation
-description: Learn how to validate data exports from your Storefront.
+description: Learn how to validate data exports from your Adobe Commerce backend to your storefront.
 ---
 
-## Validate Data Export
+Data export synchronizes data between an Adobe Commerce instance and connected storefront services.
 
-* Data sync progress can be validated self-service through the Data Management Dashboards for each SaaS service.
-  * [SaaS Data Export Guide](https://experienceleague.adobe.com/en/docs/commerce-merchant-services/saas-data-export/overview) (+troubleshooting)
-  * [Data Management Dashboard](https://experienceleague.adobe.com/en/docs/commerce-admin/systems/data-transfer/data-dashboard)
+Validating the data export is crucial to ensure that the data is correctly synchronized and available for the storefront. You can use the [Data Management Dashboard](https://experienceleague.adobe.com/en/docs/commerce-admin/systems/data-transfer/data-dashboard) to monitor the data sync progress for each service.
 
-* Use GraphQL to validate that all products were synchronized and product lookup and search are working. See [GraphQL queries](https://developer.adobe.com/commerce/services/graphql/catalog-service/products/) and [Postman sample collection](https://github.com/magento/adobe-commerce-catalog-service) for queries. 
+:::tip[Self-service data export validation]
+See the [_SaaS Data Export Guide_](https://experienceleague.adobe.com/en/docs/commerce-merchant-services/saas-data-export/overview) for details and troubleshooting.
+:::
 
-* For more complex catalogs, reach out to the Adobe team on Slack to validate that the exported data is correct. This might require you to provide a database dump or direct access.
+Use GraphQL to validate that all products were synchronized and product lookup and search are working. See [GraphQL queries](https://developer.adobe.com/commerce/services/graphql/catalog-service/products/) and [Postman sample collection](https://github.com/magento/adobe-commerce-catalog-service) for queries. 
 
-* Please also reach out to the Adobe team if you encounter any currently un-supported use cases, so that they can be enabled in the future.
+For more complex catalogs, reach out to the Adobe team on Slack to validate that the exported data is correct. This might require you to provide a database dump or direct access. Please also reach out to the Adobe team if you encounter any currently un-supported use cases, so that they can be enabled in the future.
