--- a/src/content/docs/implementation/discovery/luma-bridge.mdx
+++ b/src/content/docs/implementation/discovery/luma-bridge.mdx
@@ -3,21 +3,36 @@ title: Luma Bridge
 description: Learn how to implement the Luma Bridge for your Adobe Commerce on Edge Delivery Services project.
 ---
 
-## Side-by-side Implementation / Luma Bridge
+This section provides guidance on how to implement the Luma Bridge for your Adobe Commerce on Edge Delivery Services project.
 
-* What is side-by-side or Luma bridge?
-  * Luma bridge is an implementation for Edge Delivery + Commerce storefront projects where the complex transactional part of the store (cart, checkout, account) is re-used instead of being rebuilt during the project.
-  * If the previous discovery steps led to the conclusion that dropins can be used for cart, checkout and account experiences, Luma Bridge is not needed or can be reduced to parts that are not covered by dropins (e.g. heavy customizations).
-  * If existing headless implementatiosn for cart, checkout, account (e.g. [PWA Studio](https://github.com/magento/pwa-studio), [Vue Storefront](https://vuestorefront.io/)) are available, Luma Bridge is not needed.
-  * Rebuilding cart, checkout or account pages as part of the project is usually not feasible.
-  * Instead: Re-use existing cart, checkout and account pages based on Luma PHP. You can use Luma Bridge to route the shopper to the PHP-based cart, checkout and account pages.
-  * Be aware that with a side-by-side / Luma Bridge implementation, you will not achieve a 100 Lighthouse score on cart, checkout and account pages.
+Before starting an implementation, clarify the following:
 
-* Clarify the architecture of the cart, checkout and account part before the start of the project.
+  * The architecture of the cart, checkout, and account part
+  * The complexity of the cart, checkout, and account part
+  * The need for customizations in the cart, checkout, and account part
 
-* Luma Bridge is available from:
+This information will help you decide whether to use Luma Bridge or a headless implementation for the cart, checkout, and account pages.
+
+## What is Luma Bridge?
+
+Luma bridge is an implementation for Adobe Commerce on Edge Delivery Services projects where the complex transactional part of the store (cart, checkout, account) is reused instead of being rebuilt during the project.
+
+If the previous discovery steps led to the conclusion that dropins can be used for cart, checkout, and account experiences, Luma Bridge is not needed or can be reduced to parts that are not covered by dropins (for example, complex customizations). If existing headless implementations for cart, checkout,and  account ([PWA Studio](https://github.com/magento/pwa-studio), [Vue Storefront](https://vuestorefront.io/)) are available, Luma Bridge is not needed.
+
+Rebuilding the cart, checkout, and account pages as part of a project is usually not feasible. Instead, Adobe recommends reusing existing cart, checkout, and account pages based on Luma PHP. You can use Luma Bridge to route the shopper to the PHP-based cart, checkout, and account pages.
+
+:::note
+Be aware that with a side-by-side/Luma Bridge implementation, you will not achieve a 100 Lighthouse score on cart, checkout, and account pages.
+:::
+
+## Where can I get it?
+
+Luma Bridge is available from the following providers:
+
   * Adobe Consulting (reach out via Slack)
   * Atwix (https://www.atwix.com/)
   * Atama ([open source](https://github.com/AtamaCo/luma-bridge), https://www.atama.co/)
 
-* When using Luma Bridge, please ensure you have engineers on the project with backend PHP knowledge on Adobe Commerce.
+:::tip
+When using Luma Bridge, ensure that you have engineers on the project with backend PHP knowledge on Adobe Commerce.
+:::
