--- a/src/content/docs/implementation/index.mdx
+++ b/src/content/docs/implementation/index.mdx
@@ -1,31 +1,16 @@
 ---
 title: Headless storefront implementation
-description: Learn how to create and configure a healdess Adobe Commerce storefront with Edge Delivery Services.
+description: Learn how to create and configure a headless Adobe Commerce storefront with Edge Delivery Services.
 ---
 
-import { Tabs, TabItem, Steps } from '@astrojs/starlight/components';
-import Tasks from '@components/Tasks.astro';
-import Task from '@components/Task.astro';
-import LinkCard from '@components/LinkCard.astro';
-import Screenshot from '@components/Screenshot.astro';
-import Callouts from '@components/Callouts.astro';
-import OptionsTable from '@components/OptionsTable.astro';
-import { Image } from 'astro:assets';
 import Diagram from '@components/Diagram.astro';
-import CardGrid from '@components/CardGrid.astro';
-import Card from '@components/Card.astro';
-import Aside from '@components/Aside.astro';
-import { Icon } from '@astrojs/starlight/components';
-import Link from '@components/Link.astro';
-import Vocabulary from '@components/Vocabulary.astro';
-import Embed from '@components/Embed.astro';
 
-If you're looking for guidance about launching a headless Adobe Commerce storefront with Adobe Experience Manager [Edge Delivery Services](https://www.aem.live/), you're in the right place! This guide will help you successfully plan, implement, and launch your headless storefront on Edge Delivery Services.
+If you're looking for guidance about launching a production-ready, headless Adobe Commerce storefront with [Edge Delivery Services](https://www.aem.live/), you're in the right place! This guide will help you successfully plan, implement, and launch your storefront.
 
 ## Big picture
 
 Launching a headless Adobe Commerce storefront on Edge Delivery Services requires some basic planning and implementation steps before launch. Here's an overview of the process:
 
-<Diagram caption="Implementation planning and project delivery.">
-  ![Implementation planning and project delivery.](@images/Commerce.webp)
+<Diagram caption="Implementation planning and project delivery process.">
+  ![Implementation planning and project delivery process.](../get-started/images/SimpleCreateStorefrontSteps.svg)
 </Diagram>
