--- a/src/content/docs/implementation/launch/checklist.mdx
+++ b/src/content/docs/implementation/launch/checklist.mdx
@@ -1,32 +1,42 @@
 ---
 title: Launch checklist
-description: Learn how to launch your Edge Delivery Services for Adobe Commerce storefront project.
+description: Use this checklist to help your prepare launching an Adobe Commerce on Edge Delivery Services storefront project.
 ---
 
-## Go-live checklist
+import { Icon } from '@astrojs/starlight/components';
 
-* Please track tasks that have to be performed as part of the go-live. During the development phase of your project you will encounter tasks around migrating implementations that were done on a development or staging environment to production. It is essential to keep track of these changes, to make them reproducible on the production environment as part of the go-live activities.
+The launch of a new storefront can be an overwhelming and stressful process. If you don't have a checklist, you're likely to forget something.
 
-* We discourage scheduling a go-live shortly before the weekend, as the Adobe engineering team might have limited availability fix critical issues if they occur.
+Tracking all the tasks that need to be completed before the launch of your Adobe Commerce on Edge Delivery Services storefront project is a best practice. This checklist will help you ensure that you have everything in place before you launch.
 
-* Please start your list with https://www.aem.live/docs/go-live-checklist. For Commerce sites, please put an increased priority on SEO topics.
+During the development phase of your project, you'll encounter tasks around migrating implementations that were done on a development or staging environment to production. It is essential to keep track of these changes and make them reproducible on the production environment as part of the launch activities.
 
-* Additionally, please also consider the following action items.
-    * Switch to Catalog Service production endpoint (https://catalog-service.adobe.io/graphql)
-      * Ensure a production environment is configured in Service Connector (will result in a new environmentId).
-      * Sync production catalog to the new production environment.
-      * Create a new Commerce production API key pair and use public key as x-api-key value.
-      * Double check category IDs and make sure all category pages have a reference to the correct category.
-      * Update environmentId and x-api-key values in .helix/config.xlsx.
-      * Let the Catalog Service team know about the new production environment and go-live date.
-    * Use production GraphQL endpoint yourproject.com/graphql. Needs to be changed in CDN.
-      * Make sure to also use this for all the Sidekick extensions and scripts (e.g. sitemap generation, image importer).
-    * When using Adobe Commerce Fastly, request a new CDN purge token for Commerce production environment.
-      * Update in Sharepoint in .helix/config.xlsx file (authToken and serviceId). 
-    * Verify / Update links for password reset e-mail to match EDS implementation in Commerce admin.
-    * Verify configuration of integrations and payment providers (e.g. reCAPTCHA, Adyen, Bazaarvoice).
-      * Provide and configure production keys.
-      * Verify that the new domains / subdomains are allowlisted and potential backend webhooks are working.
-    * Add robots.txt
-      * Block /drafts path on CDN to prevent any drafts to be publicly accessible on the production URL.
-    * Ensure lighthouse score is green targeting to 100 score on every page (taking into account previous considerations mentioned on this document)
+:::caution
+Avoid scheduling a launch shortly before a weekend. The Adobe engineering team might have limited availability to fix critical issues if they occur.
+:::
+
+Start your checklist with the [Go-Live Checklist](https://www.aem.live/docs/go-live-checklist). For Commerce sites, you should prioritize SEO tasks. Additionally, consider the following action items.
+  
+* Switch to the Catalog Service production endpoint (https://catalog-service.adobe.io/graphql)
+  * Ensure a production environment is configured in the Service Connector (will result in a new `environmentId`).
+  * Sync the production catalog to the new production environment.
+  * Create a new Commerce production API key-pair and use the public key as the `x-api-key` value.
+  * Double check category IDs and make sure all category pages have a reference to the correct category.
+  * Update `environmentId` and `x-api-key` values in the `.helix/config.xlsx` file.
+  * Let the Catalog Service team know about the new production environment and launch date.
+
+* Use the production GraphQL endpoint `yourproject.com/graphql` (needs to be changed in the CDN).
+  * Make sure to also use this for all the Sidekick extensions and scripts (e.g. sitemap generation, image importer).
+
+* When using Adobe Commerce Fastly, request a new CDN purge token for Commerce production environment.
+  * Update in Sharepoint in the `.helix/config.xlsx` file (`authToken` and `serviceId`).
+
+* Verify/update links for password reset e-mail to match the Edge Delivery Service implementation in the Adobe Commerce Admin.
+* Verify the configuration of integrations and payment providers (reCAPTCHA, Adyen, Bazaarvoice).
+  * Provide and configure production keys.
+  * Verify that the new domains/subdomains are allowlisted and potential backend webhooks are working.
+
+* Add a `robots.txt` file.
+  * Block the `/drafts` path on the CDN to prevent any drafts from being publicly accessible on the production URL.
+  
+* Ensure that the site's Lighthouse score is green; targeting `100` on every page (taking into account previous considerations mentioned on this document).
