--- a/src/content/docs/implementation/marketing/index.mdx
+++ b/src/content/docs/implementation/marketing/index.mdx
@@ -5,26 +5,29 @@ description: Optimize your Adobe Commerce site for SEO and social media with pro
 
 In addition to typical marketing technology stacks, Adobe Commerce sites usually use Adobe Client Data Layer to expose Commerce data and events. This data can be read by custom analytics implementations and should also be sent back to Adobe Commerce.
 
-## Commerce Instrumentation
+## Commerce instrumentation
 
-* For Live Search and Product Recommendation APIs to work correctly, it is required to collect and send user interaction events to Commerce.
-  * To power intelligent Adobe Sensei features like Intelligent Merchandizing for Live Search and to personalize product recommendations units.
-  * To populate the performance dashboard for Live Search and Product Recommendations which provide information like conversion metrics
-    * https://experienceleague.adobe.com/docs/commerce-merchant-services/product-recommendations/admin/workspace.html?lang=en
-    * https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/live-search-admin/performance.html?lang=en
+For Live Search and Product Recommendation APIs to work correctly, it is required to collect and send user interaction events to Commerce:
 
-* The boilerplate includes [Adobe Client Data Layer](https://github.com/adobe/adobe-client-data-layer) by default.
-  * It uses a custom more lightweight version that is suitable to be loaded early in Edge Delivery. Please have a look at https://github.com/adobe/adobe-client-data-layer/pull/155
-  * To validate events, you can use https://github.com/adobe/adobe-client-data-layer/pull/156
+* To power intelligent Adobe Sensei features, like Intelligent Merchandizing for Live Search, and to personalize product recommendations units.
+* To populate the performance dashboard for Live Search and Product Recommendations, which provides information about conversion metrics
+  * [Product Recommendations workspace](https://experienceleague.adobe.com/en/docs/commerce-merchant-services/product-recommendations/admin/workspace)
+  * [Live Search performance workspace](https://experienceleague.adobe.com/en/docs/commerce-merchant-services/live-search/live-search-admin/performance)
 
-* Events written to ACDL need to comply a specific schema as defined by [Storefront Event SDK](https://github.com/adobe/commerce-events/tree/main/packages/storefront-events-sdk).
+The boilerplate includes the [Adobe Client Data Layer (ACDL)](https://github.com/adobe/adobe-client-data-layer) by default.
 
-* For performance considerations it is highly recommended to write events to ACDL directly without using the Events SDK.
-  * Dropins and widgets will send events to ACDL out of the box. But please double check the correctness of all these events.
+* It uses a custom, more lightweight version that is suitable to be loaded early in Edge Delivery Services. For example, https://github.com/adobe/adobe-client-data-layer/pull/155.
+* To validate events, you can use https://github.com/adobe/adobe-client-data-layer/pull/156.
 
-* Commerce events should be sent to Snowplow (owned by Adobe Commerce) to continuously learn from the data and improve recommendations and search results.
-  * The boilerplate loads [Storefront Events Collector](https://github.com/adobe/commerce-events/tree/main/packages/storefront-events-collector) in the delayed phase to automatically send those events.
-  * For the collector to work, please ensure that the configs file is properly populated with all configuration parameters. The configuration parameters are a mix between those that are required for Catalog Service access and some specific to data services. The easiest way to retrieve them is using the magento/module-data-services-graphql module which exposes an additional GraphQL.
+Events written to ACDL must comply to a specific schema as defined by the [Storefront Event SDK](https://github.com/adobe/commerce-events/tree/main/packages/storefront-events-sdk).
+
+* For performance considerations, Adobe highly recommends writing events to the ACDL directly without using the Events SDK.
+* Dropins and widgets will send events to ACDL out of the box, but double check the correctness of all events.
+
+Commerce events should be sent to Snowplow to continuously learn from the data and improve recommendations and search results.
+
+* The boilerplate loads [Storefront Events Collector](https://github.com/adobe/commerce-events/tree/main/packages/storefront-events-collector) in the delayed phase to automatically send those events.
+* For the collector to work, ensure that the configuration file is properly populated with all configuration parameters. The configuration parameters are a mix between those that are required for Catalog Service access and some specific to data services. The easiest way to retrieve them is using the `magento/module-data-services-graphql` module, which exposes additional GraphQL functionality.
 
 ## Schema.org data (JSON-LD)
 
@@ -39,7 +42,7 @@ In addition to typical marketing technology stacks, Adobe Commerce sites usually
 
 * If you are using Google Shopping features (e.g. products available on shopping.google.com), please consider schema.org annotations with critical priority. Invalid data will be flagged by Google which leads to a delisting of the customer's products and financial impact.
 
-## Meta data & Social Media
+## Metadata and social media
 
 * Please ensure that all pages including catalog pages (PDP & PLP) the following data set and verified:
   * Document title via title tag
