--- a/src/content/docs/implementation/setup/commerce-blocks.mdx
+++ b/src/content/docs/implementation/setup/commerce-blocks.mdx
@@ -1,15 +1,14 @@
 ---
 title: Commerce blocks
-description: Implement Commerce blocks in your Storefront.
+description: Learn how to implement commerce blocks in your Adobe Commerce storefront on Edge Delivery Services.
 ---
 
-## Implement Commerce blocks
+Compared to content blocks, blocks that enable Adobe Commerce functionality (minicart, product teaser, recommendations) can become quite complex.
 
-* Compared to content blocks, blocks that enable Commerce functionality (e.g. minicart, product teaser, recommendations) can become quite complex.
+Using a frontend framework can help manage the complexity. In the boilerplate, you can find examples of blocks that use a buildless version of [Preact](https://preactjs.com/) and [HTM](https://github.com/developit/htm).
 
-* Usage of a frontend framework can help with managing the complexity.
-  * In the boilerplate you can find examples of blocks that use a [buildless](https://preactjs.com/guide/v10/getting-started/#no-build-tools-route) version of [Preact](https://preactjs.com/) and [HTM](https://github.com/developit/htm).
-  * Only use it for blocks that require complex state management with different render states. Otherwise stick with plain JavaScript.
-  * Use existing blocks in Commerce boilerplate as reference (e.g. teaser and product recommendations).
+You should only use it for blocks that require complex state management with different render states. Otherwise, stick with plain JavaScript.
 
-* If you want to use React, this is possible, but not recommended. React is usually too heavy (size + execution) to achieve perfect lighthouse scores.
+Use the existing blocks in the Commerce boilerplate as a reference (e.g. teaser and product recommendations).
+
+If you want to use React, this is possible, but not recommended. React is usually too heavy (size + execution) to achieve perfect lighthouse scores.
