--- a/src/content/docs/implementation/setup/index.mdx
+++ b/src/content/docs/implementation/setup/index.mdx
@@ -1,23 +1,24 @@
 ---
 title: Project setup
-description: Learn the differences in implementing Edge Delivery Services projects with Adobe Commerce. Setup includes CDN configuration, caching validation, Commerce dropins, and custom blocks.
+description: Learn the differences in implementing Edge Delivery Services projects for Adobe Commerce.
 ---
+
+import Diagram from '@components/Diagram.astro';
 
 This section highlights the differences during the implementation phase compared to normal Edge Delivery projects.
 
-## Project Kickoff
+Adobe recommends starting with the [Commerce boilerplate](https://github.com/hlxsites/aem-boilerplate-commerce) to get a head start on the implementation. The [Ceate your storefront tutorial](/get-started/) provides all the information that you need to get started in about 20 minutes. 
 
-* Start project from Commerce boilerplate
-  * Repository: [Edge Delivery + Commerce boilerplate](https://github.com/hlxsites/aem-boilerplate-commerce)
-  * This is a fork of the normal Edge Delivery boilerplate which includes additional code for Commerce
+The boilerplate GitHub repsitory is a fork of the [Edge Delivery Services boilerplate](https://github.com/adobe/aem-boilerplate). It includes additional code specifically for Commerce use cases.
 
-* Setup content source
-  * For document-based authoring with SharePoint or Google Docs only
-  * Content is available as release artifact https://github.com/hlxsites/aem-boilerplate-commerce/releases
+:::note[Note]
+All of the implementation guidance on this site is based on the Commerce boilerplate. 
+:::
 
-## Setup Commerce config
+## Big picture
 
-* In the starter content, you will find a configs.xlsx file in the root folder. This file is used to expose configuration parameters to the frontend blocks.
-* Update the configuration values with the customer specific Catalog Service header values.
-* Update the configuration values with the Core GraphQL endpoint that was configured as part of the CDN setup.
-* The required values are documented on https://experienceleague.adobe.com/developer/commerce/storefront/references/configurations/.
+The project setup for an Adobe Commerce storefront is similar to a normal Edge Delivery Servicesproject. The main difference is that you need to connect your storefront to your Adobe Commerce backend. The following diagram shows the high-level setup process:
+
+<Diagram caption="Project setup process.">
+  ![Project setup process.](../../get-started/images/SimpleCreateStorefrontSteps.svg)
+</Diagram>
